# exav

./: .gitignore  Cargo.toml  Makefile  NOTICE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
crates/exav-cli/: Cargo.toml
crates/exav-cli/src/: daemon.rs  main.rs  perf.rs
crates/exav-core/: Cargo.toml
crates/exav-core/examples/: bc_scan.rs  diag.rs  dump_bc.rs  fzcount.rs  probe_trigger.rs  triage_bc.rs
crates/exav-core/src/: cache.rs  container.rs  cvd.rs  db.rs  engine.rs  filetype.rs  fuzzy.rs  fuzzy_img.rs  hashes.rs  hexsig.rs  icon.rs  lib.rs  ml.rs  normalize.rs  patterns.rs  pe.rs  profile.rs  source.rs  yara.rs
crates/exav-core/src/bytecode/: decode.rs  disasm.rs  exec.rs  instr.rs  mod.rs  parse.rs  runtime.rs  types.rs
crates/exav-core/tests/: bytecode_gating.rs  encrypted_archives.rs
crates/exav-unpack/: Cargo.toml
crates/exav-unpack-cli/: Cargo.toml  README.md
crates/exav-unpack-cli/src/: main.rs
crates/exav-unpack-wasm/: Cargo.toml  PLAN.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
crates/exav-unpack-wasm/e2e/: archive.spec.ts  test.html
crates/exav-unpack-wasm/src/: lib.rs
crates/exav-unpack-wasm/tests/: helpers.test.ts
crates/exav-unpack/examples/: rar3_check.rs  rar5_check.rs
crates/exav-unpack/fuzz/: Cargo.toml  python_fuzz.py
crates/exav-unpack/fuzz/fuzz_targets/: fuzz_all_formats.rs
crates/exav-unpack/src/: lib.rs
crates/exav-unpack/src/formats/: ar.rs  arj.rs  bzip2.rs  cab.rs  cpio.rs  dmg.rs  email.rs  gzip.rs  iso.rs  lha.rs  lzip.rs  mod.rs  ole.rs  pdf.rs  rar.rs  rar3_unpack.rs  rar5_unpack.rs  sevenz.rs  tar.rs  udif.rs  upx.rs  vba.rs  xar.rs  xz.rs  zip.rs  zip_crypto.rs  zstd.rs
crates/exav-unpack/src/formats/arj_parse/: arj_archive.rs  crypto.rs  date_time.rs  decode_fastest.rs  encryption.rs  local_file_header.rs  macros.rs  main_header.rs  mod.rs
crates/exav-unpack/src/formats/pdf_parse/: crypt.rs  lex.rs  mod.rs  parse.rs  types.rs
crates/exav-unpack/src/formats/ppmd7/: mod.rs  model.rs  rangedec.rs  tagged_offset.rs
crates/exav-unpack/src/formats/sevenz/: decode.rs  entry.rs  header.rs  mod.rs  parse.rs
crates/exav-unpack/tests/: dmg.rs  encrypted_zip.rs  panic_containment.rs  pdf_parse.rs  rar3_ppmd.rs
crates/exav-unpack/tests/fixtures/: cab_folder_panic.cab  cab_folder_panic2.cab  cpio_bin_oob.cpio  iso_short_record.iso  iso_short_record2.iso  lzip_simple.lz  sample.arj  upx_lzma.upx  upx_nrv2d.upx  upx_nrv2e.upx  upx_nrv_gamma_overflow.upx
crates/exav-unpack/tests/fixtures/7z/: bzip2.7z  copy.7z  deflate.7z  encrypted_header.7z  lzma.7z  lzma2_nonsolid.7z  lzma2_solid.7z  ppmd.7z
crates/exav-unpack/tests/fixtures/dmg/: apfs_encrypted.dmg  apfs_readonly.dmg  apfs_udrw.dmg  encrypted.dmg  fixture_gen.sh  hfs_plus_udrw.dmg  hfs_plus_udzo.dmg  read_only.dmg
crates/exav-unpack/tests/fixtures/encrypted/: aes256_hdr.7z
crates/exav-unpack/tests/fixtures/rar/: ppmd_lzss_conversion.rar
crates/exav-unpack/tests/fixtures/xz/: bomb.xz  fixture_gen.sh  multi.xz  simple.xz
crates/exav-wasm/: Cargo.toml
crates/exav-wasm/src/: main.rs
docs/: BYTECODE.md  BYTECODE_VALIDATION.md  DATABASE.md  DIFF_TESTING.md  FUZZING.md  WASM.md
fuzz/: Cargo.toml  fetch_mb_corpus.sh
fuzz/fuzz_targets/: analyze.rs  bytecode.rs  cvd.rs  filetype.rs  pe.rs  rar3_ppmd.rs  sigs.rs  unpack.rs
