[package]
name = "exav-unpack"
description = "Bounded, memory-safe archive/container extraction for the exav scanner."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# typed error type
thiserror = "2"
# fast substring search (locating the UPX PackHeader magic)
memchr = "2"
zip = { version = "8", default-features = false, features = ["deflate-flate2"] }
# `default-features = false` drops `tar`'s `xattr` feature (extended-attribute
# *restore* on disk extraction) — we extract to memory and never restore xattrs,
# so it's unused. This removes the `rustix` + `linux-raw-sys` syscall crates
# entirely (~8,600 `unsafe` ops, the single largest source in the dep tree).
tar = { version = "0.4", default-features = false }
bzip2-rs = "0.1.2"
cab = "0.6.0"
# structured documents that contain embedded files
cfb = "0.14.0"
mail-parser = "0.11.4"
delharc = "0.6.1"
# ARJ decompression: bitstream-io for the "fastest" LZ77 codec
bitstream-io = "4.10.0"
# Pure-Rust crypto for decrypting password-known encrypted archive members
# (ZIP ZipCrypto + WinZip AES). DECRYPTION needs only a cipher + a KDF, no RNG,
# so none of these pull `getrandom` (verified) — the hard no-getrandom default
# build is preserved. We do NOT enable the `zip` crate's `aes-crypto`/encryption
# features, which would pull `getrandom` for salt/IV generation we never do.
aes = "0.8"
hmac = "0.12"
sha1 = "0.10"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
constant_time_eq = "0.3"
# DMG support
hfsplus = "0.2"
apfs = "0.2"
lzfse_rust = "0.2.1"
base64 = "0.22"
quick-xml = "0.37"
des = { version = "0.8", default-features = false }
cbc = "0.1"
bincode = "1"
serde = { version = "1.0.228", features = ["derive"] }
flate2 = "1.1.9"
lzma-rust2 = { version = "0.16.4", default-features = false, features = ["std", "lzip"] }
# PDF crypto primitives (replacing hand-rolled implementations)
md-5 = "0.10"
sha2 = "0.10"
digest = "0.10"
stringprep = "0.1"
xz4rust = { version = "0.2.1", default-features = false, features = ["std", "bcj", "crc64", "delta", "no_unsafe"] }
ruzstd = "0.8"
crc32fast = "1.5.0"

[features]
# Verify RAR5-decompressed output against the header CRC-32 (debug assert).
# Off by default; enabled by the rar5_check example/tests.
rar5-crc-check = []

[dev-dependencies]
# Reference PPMd7 (var.H) encoder, used only to validate the vendored PPMd7
# model in `formats/ppmd7` against a known-good 7z-coder stream (CC0-1.0/MIT-0).
ppmd-rust = "1"
# Used only in tests to create 7z archives for roundtrip testing.
sevenz-rust2 = { version = "0.20.2", default-features = false, features = ["bzip2", "ppmd", "util", "compress"] }
